# wozniak_coffee_test

./: .gitignore  README.md  pyproject.toml  requirements.txt
robot_control_language/: chat_hercules.py  llm.py  settings.yaml  terminal_chat.py  tools.py
robot_control_language/coffee/: tools.py
src/: MolmoAi_Setup_Remoto_Atena.md  README-Luiz.md  README_Setup.md
src/database_wozniak/: status.json
src/oculus-realsense/: CMakeLists.txt  package.xml
src/oculus-realsense/launch/: calibration.launch.py
src/oculus-realsense/src/: red_dot_recognition.cpp
src/robot_control_language/: package.xml  setup.cfg  setup.py
src/robot_control_language/launch/: realsense.launch.py
src/robot_control_language/robot_control_language/: llm.py  llm_client.py  llm_node.py  realsense_llm.py  terminal_chat.py  tools_node.py
src/robot_control_language/robot_control_language/coffee/: settings.yaml  tools.py
src/robot_control_language/robot_control_language/temperature_test/: settings.yaml  tools.py
src/wozniak_interfaces/: CMakeLists.txt  package.xml
src/wozniak_interfaces/srv/: HighlightObject.srv  PickObject.srv  TriggerLLM.srv
src/wozniak_services/: package.xml  setup.cfg  setup.py
src/wozniak_services/wozniak_services/: mock_unity_server.py  pick_object.py  pick_object_legacy.py
unity_project/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Demo Object Recognition v2.sln  NuGetForUnity.csproj
unity_project/Assets/Materials/: Green.mat  Sphere.prefab  Sphere2.prefab
unity_project/Assets/Oculus/: OculusProjectConfig.asset
unity_project/Assets/RosSharp/Scripts/RosBridgeClient/RosCommuncation/: RosConnector.cs
unity_project/Assets/RosSharpMessages/Coord/srv/: CoordRequest.cs  CoordResponse.cs
unity_project/Assets/Scenes/: teste.unity
unity_project/Assets/Scripts/: CanvasHandler.cs  CoordService.cs  GameControl.cs  WozniakService.cs
